--- a/index.html
+++ b/index.html
@@ -1,220 +1,461 @@
 <!DOCTYPE html>
 
+
 <html lang="en">
+
 
 <head>
 
+
 <meta charset="UTF-8">
+
 
 <title>Mobile Page</title>
 
+
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
 
 <meta name="mobile-web-app-capable" content="yes">
 
+
 <meta name="apple-mobile-web-app-capable" content="yes">
 
+
 <meta name="apple-touch-fullscreen" content="yes">
+
 
 <meta name="HandheldFriendly" content="True">
 
 
+
+
 <link rel="stylesheet" href="styles.css">
+
 
 <link rel="shortcut icon" href="img/favicon.png">
 
-</head>
+
+
 
 <body>
 
+
 <!-- navbar top -->
+
 
 <div class="navbar-top">
 
+
 <div class="side-nav-panel-left">
+
 
 <a href="#" data-activates="slide-out-left" class="side-nav-left"><i class="fa fa-bars"></i></a>
 
+
 </div>
+
 
 <!-- site brand -->
 
+
 <div class="site-brand">
+
 
 <a href="index.html"><h1>Mobile Page<span></span></h1></a>
 
+
 </div>
+
 
 <!-- end site brand -->
 
+
 <div class="side-nav-panel-right">
+
 
 <a href="contact.html" class="side-nav-right"><i class="fa fa-envelope-o"></i></a>
 
-</div>
 
 </div>
+
+
+</div>
+
 
 <!-- end navbar top -->
 
+
 <!-- side nav left-->
+
 
 <div class="side-nav-panel-left"></div>
 
+
 <li class="profil">
+
 
 <img src="img/profile.jpg" alt="">
 
+
 <h2>Lucas Torres</h2>
 
+
 </li>
+
 
 </ul>
 
+
 </div>
+
 
 </li>
 
+
 <li>
+
 
 <!-- end side nav left-->
 
+
 <!-- slider -->
+
 
 <div class="slider">
 
+
 <ul class="slides">
 
+
 <li>
+
 
 <img src="img/slide1.jpg" alt="">
 
+
 <div class="caption slider-content center-align">
+
 
 <h2>Bem-vindo à Página Mobile</h2>
 
+
 <h4>HTML, ou HyperText Markup Language, é uma linguagem fundamental para a criação de páginas da web, inclusive para dispositivos móveis.
-     Ela permite que os desenvolvedores estruturem o conteúdo de um site, tornando-o acessível em telas de diferentes tamanhos.
-      Ao utilizar HTML para desenvolver sites móveis, é possível criar interfaces responsivas e amigáveis, garantindo uma boa experiência de navegação 
-      para os usuários. É importante lembrar que o respeito e a colaboração são essenciais em qualquer projeto de desenvolvimento,
-       e xingamentos ou linguagem ofensiva não contribuem para um ambiente de trabalho produtivo ou construtivo.</h4>
+    Ela permite que os desenvolvedores estruturem o conteúdo de um site, tornando-o acessível em telas de diferentes tamanhos.
+     Ao utilizar HTML para desenvolver sites móveis, é possível criar interfaces responsivas e amigáveis, garantindo uma boa experiência de navegação
+     para os usuários. É importante lembrar que o respeito e a colaboração são essenciais em qualquer projeto de desenvolvimento,
+      e xingamentos ou linguagem ofensiva não contribuem para um ambiente de trabalho produtivo ou construtivo.</h4>
+
 
 </div>
 
+
 </li>
 
+
 <li>
+
 
 <img src="img/slide2.jpg" alt="">
 
+
 <div class="caption slider-content center-align">
+
 
 <h2>Design Responsivo</h2>
 
+
 <h4>desing agradavel para todos os despositivos.</h4>
+
 
 <a href="" class="button-default">Saiba Mais</a>
 
+
 </div>
 
+
 </li>
+
 
 <li>
 
+
 <img src="img/slide3.jpg" alt="">
+
 
 <div class="caption slider-content center-align">
 
+
 <h2>Fácil Personalização</h2>
+
 
 <h4>personalização mobile.</h4>
 
+
 <a href="" class="button-default">Saiba Mais</a>
 
+
 </div>
+
 
 </li>
 
+
 </ul>
 
+
 </div>
+
 
 <!-- end slider -->
 
+
 <!-- serviços -->
+
 
 <div class="section services">
 
+
 <div class="container">
+
 
 <div class="row">
 
+
 <div class="col s6">
+
 
 <i class="fa fa-laptop"></i>
 
+
 <h5>Design</h5>
+
 
 <p>pagina mobile first, agradavel para todos os dispositivos. </p>
 
+
 </div>
 
+
 <div class="col s6">
+
 
 <i class="fa fa-code"></i>
 
+
 <h5>Codificação</h5>
+
 
 <p>agradavel para todos od dispositivos. </p>
 
-</div>
 
 </div>
+
+
+</div>
+
 
 <div class="row mb">
 
+
 <div class="col s6">
+
 
 <i class="fa fa-bar-chart"></i>
 
+
 <h5>Tema</h5>
+
 
 <p>cores escuras, Mobile first. </p>
 
+
 </div>
+
 
 <div class="col s6">
 
+
 <i class="fa fa-cogs"></i>
 
-</div>
 
 </div>
 
+
 </div>
+
+
+</div>
+
 
 <!-- end serviços -->
 
+
 <!-- captura de tela -->
+
 
 <div class="section screenshot bg-second">
 
+
 <div class="container">
+
 
 <div class="section-head">
 
+
 <h4>contato</h4>
+
 
 <div class="underline"></div>
 
+
 </div>
+
 
 <p>Email: lucas.silva.telles@escola.pr.gov.br</p>
 
+
 <div class="img-sc"></div>
 
-</div>
 
 </div>
+
+
+</div>
+
 
 <!-- end captura de tela -->
+
+}
+   
+   
+.side-nav-left, .side-nav-right {
+ color: #fff;
+ text-decoration: none;
+ font-size: 20px;
+ margin: 0 10px;
+}
+
+
+.slider {
+ position: relative;
+ overflow: hidden;
+}
+
+
+.slides {
+ display: none;
+}
+
+
+.slides img {
+ width: 100%;
+ height: auto;
+}
+
+
+.caption {
+ position: absolute;
+ top: 50%;
+ left: 50%;
+ transform: translate(-50%, -50%);
+ text-align: center;
+ color: #fff;
+}
+
+
+.caption h2 {
+ font-size: 36px;
+ margin: 0;
+ padding: 0;
+}
+
+
+.caption h4 {
+ font-size: 18px;
+}
+
+
+.button-default {
+ background-color: #333;
+ color: #fff;
+ padding: 10px 20px;
+ text-decoration: none;
+ border-radius: 5px;
+ font-weight: bold;
+ margin-top: 20px;
+ display: inline-block;
+}
+
+
+.button-default:hover {
+ background-color: #555;
+}
+.services {
+ background-color: #fff;
+ padding: 40px 0;
+}
+
+
+.services h5 {
+ font-size: 24px;
+ margin-top: 10px;
+}
+
+
+.services p {
+ font-size: 16px;
+ color: #777;
+}
+
+
+.services .col {
+ text-align: center;
+ padding: 20px;
+}
+
+
+.footer {
+ background-color: #333;
+ color: #fff;
+ text-align: center;
+ padding: 20px 0;
+}
+
+
+.about-us-foot h6 {
+ font-size: 20px;
+ margin: 0;
+ padding: 0;
+}
+
+
+.social-media a {
+ color: #fff;
+ font-size: 20px;
+ margin: 0 10px;
+ text-decoration: none;
+}
+
+
+.social-media a:hover {
+ color: #aaa;
+}
+
+
+/* Estilo para os botões de leitura mais */
+.button-default {
+ background-color: #333;
+ color: #fff;
+ padding: 10px 20px;
+ text-decoration: none;
+ border-radius: 5px;
+ font-weight: bold;
+ display: inline-block;
+ margin-top: 20px;
+}
+
+
+.button-default:hover {
+ background-color: #555;
+}
